refactor: Simplify fetchPostsByTicker method and improve backoff handling